main/default/objects/SPC_Relationship_Type__c/fields/Feature_Package__c.field-meta.xml
<CustomField>
    <fullName>Feature_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feature Package</label>
    <type>Checkbox</type>
</CustomField>