main/default/objects/SPC_Relationship_Type__c/fields/Pick_Multi__c.field-meta.xml
<CustomField>
    <fullName>Pick_Multi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pick Multi</label>
    <type>Checkbox</type>
</CustomField>