main/default/objects/SPC_Relationship_Type__c/fields/Pick_One__c.field-meta.xml
<CustomField>
    <fullName>Pick_One__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pick One</label>
    <type>Checkbox</type>
</CustomField>