main/default/objects/SPC_Relationship_Type__c/fields/Relationship_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type_ID__c</fullName>
    <externalId>true</externalId>
    <label>Relationship Type ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>