main/default/objects/SPC_Relationship_Type__c/fields/Use_Parent__c.field-meta.xml
<CustomField>
    <fullName>Use_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Parent</label>
    <type>Checkbox</type>
</CustomField>